Removed the server binary for the cli binary. and updated the package.json

--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   },
   "homepage": "https://github.com/Schniz/libre-convert",
   "bin": {
-    "libre-converter": "./bin/server"
+    "libre-converter": "./bin/cli"
   }
 }
